# monitoring-amr

./: .gitignore  Costing.xlsx  README.md  chatgpt-api.py  monitoring_amr.csv  new_monitoring_amr.csv  theory-of-change.docx  web-scraper.py
leximine/: README.md  config.toml  main.py  pyproject.toml
leximine/src/app/: __init__.py  main.py
tool/: README.md  README.txt  __main__.py  amr-monitor.py  amr_monitor.py  api_key.env  chatgpt-api.py  chatgpt_api.py  config.json  csv-output.py  generate_queries.py  install_required_modules.bat  main.py  output_csv.py  utils.py  web-scraper.py  web_scraper.py
tool/api_commands/: example_request.txt  example_requests.txt  request.txt  synopsis.txt  variables_to_track.txt
tool/keyword_data/: amr_pathogen_keywords.txt  locations.txt  pathogen_keywords.txt  sources.txt
tool/outputs/: amr_monitoring_results.csv  new_amr_monitoring_results.csv
tool/query_generation/: antimicrobial_keywords.txt  symptom_keywords.txt  templates.txt
tool/website_data/: blacklist.txt  urls.txt
